# tiny-exe

./: CMakeLists.txt  README.md
cmake/: Arch.cmake  CompileOptions.cmake  Processor.cmake
docs/: test.md
exe/: CMakeLists.txt
exe/executors/: execute.hpp  executor.hpp  task.hpp  thread_pool.hpp
exe/executors/tp/compute/: thread_pool.cpp  thread_pool.hpp
exe/support/: blocking_queue.hpp  go_inclusions.hpp
exe/support/intrusive/: forward_list.hpp
tests/: CMakeLists.txt
